--- a/back/package.json
+++ b/back/package.json
@@ -9,5 +9,17 @@
     "firebase-admin": "^13.4.0",
     "nodemon": "^3.1.10",
     "request": "^2.88.2"
-  }
+  },
+  "name": "back",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
